# AUTOCODER

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
KERNEL /: Config .txt  Cryptographic .txt  Developer cli.txt  Distributed .txt  Global memory.txt  Golden snapshot .txt  Micro VMware.txt  Ochachi.txt  Redis and cas.txt  Requirements.txt  Version control.txt  Z3 smt .txt  bootstrap .txt  dashboard .txt  full instruct ton.txt  guest manifest .txt  guest verification .txt  kernel latency .txt  rust data plane.txt  rust data.txt  text.txt  tree sitter ast.txt
config/: dev-macos.toml  linux-prod.toml  omega.toml  split-brain-mac.toml
config/env/: linux-executor.example.env  split-brain-mac.example.env
control_plane/: __init__.py  cas_client.py  contracts.py  coverage_analysis.py  dispatcher.py  fault_localization.py  forest_worker.py  global_memory.py  merger.py  metadata_store.py  omega_cli.py  planning.py  policy_gate.py  redis_keys.py  runtime.py  settings.py  signatures.py  simulator_executor.py  smt_oracle.py  telemetry_api.py  tree_sitter_engine.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  styles.css
docs/: linux-firecracker-bringup.md  utm-local-vm.md
guest_agent/: Cargo.toml  funnel.py
guest_agent/src/: main.rs
omega_hypervisor/: Cargo.toml
omega_hypervisor/src/: main.rs
scripts/: bootstrap.sh  build_golden_snapshot.sh  run_optimization_audit.py  start_control_plane.sh  start_linux_executor.sh  stop_control_plane.sh  verify_repo.sh
telemetry/: omega_telemetry.bt
(+21 files in other folders)
