[package]
name = "omega_hypervisor"
version = "19.0.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-lite = "2.3.0"
glommio = "0.9.0"
hex = "0.4.3"
libc = "0.2"
rand_core = { version = "0.6.4", features = ["std"] }
redis = "0.27.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"

